Includes tutorial video in FAQ section, include changelog summary link in documentation page, fix border not showing in firefox

--- a/css/zanata.css
+++ b/css/zanata.css
@@ -422,3 +422,8 @@ tr.desc{
     vertical-align:top;
     text-align: right;
 }
+
+.tutorial_table td {
+   padding:10px;
+  vertical-align:bottom;
+}
